# routes/api.php
@@ -6,4 +6,5 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 Route::apiResource('users', UserController::class);
+Route::delete('likes/remove', [LikeController::class, 'removeLike']);
 Route::apiResource('likes', LikeController::class);
